--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,6 +9,13 @@ body{
     color: rgb(52, 165, 52);
 }
 
-.titulo{
-   aligh: center;
+.titulo {
+    text-align: center;
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
